Paginas novvas e altercoes

--- a/main.html
+++ b/main.html
@@ -1,24 +1,97 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
   <head>
-    <title>athenista</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="estilo.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>alêmittö</title>
+    <link rel="stylesheet" href="estilo.css" />
+    <link rel="icon" type="imagem/png" href="imagens/17 Sem Título_20220701194002.png" />
   </head>
-  
   <body>
-    
-    <header style="width:100%; height: 100%;">
-      <h1>athenista</h1>
-      <h2 class ="topicos">topico1</h2>
-      <h2 class ="topicos">topico2</h2>
-      <h2 class ="topicos">topico3</h2>
-  </header>
+    <!-- Cabeçalho e menu -->
+    <header>
+      <img src="https://i.ibb.co/nMvyL54/imagem-2022-06-26-181027258.png" alt="imagem logo alêmittö" border="0">
+      <img src="https://i.ibb.co/35Xrmtv/imagem-2022-06-26-181243479.png" alt="imagem nome" border="0">
+          <!-- Navegação -->
+      <input type="checkbox" id="chec">
+        <label for="chec">
+          <img src="https://cdn-icons-png.flaticon.com/512/55/55003.png" alt="imagem menu">
+        </label>
+      <nav>
+          <ul>
+           <li> <a href="">Home</a> </li>
+           <li> <a href="">Quiz</a> </li>
+           <li> <a href="">Créditos</a> </li>
+        </ul>
+      </nav>
+    </header>
+
+    <!-- abas de páginas -->
+    <main class="container">
+      <section class="products-container">
+        <div class="card">
+          <div class="product-image" id="img-1"></div>
+          <h3>Deuses Principais</h3>
+          <p>saiba mais sobre os principais deuses desta mitologia</p>
+          <p>
+            <span class="bold">26/03/2021</span>
+          </p>
+          <a href="deuses.html" class="btn">CLIQUE AQUI</a>
+        </div>
+        <div class="card">
+          <div class="product-image" id="img-2"></div>
+          <h3>assunto 2</h3>
+          <p>Este assunto é sobre </p>
+          <p>
+            <span class="bold">07/08/2021</span>
+          </p>
+          <a href="assunto2.html" class="btn">CLIQUE AQUI</a>
+        </div>
+        <div class="card">
+          <div class="product-image" id="img-3"></div>
+          <h3>ASSUNTO 3</h3>
+          <p>Este assunto é sobre</p>
+          <p>
+            <span class="bold">12/05/2021</span>
+          </p>
+          <a href="assunto3.html" class="btn">CLIQUE AQUI</a>
+        </div>
+        <div class="card">
+          <div class="product-image" id="img-4"></div>
+          <h3>ASSUNTO 4</h3>
+          <p>bla bla bla</p>
+          <p>
+            <span class="bold">31/03/2022</span>
+          </p>
+          <a href="assunto4.html" class="btn">clique aqui </a>
+        </div>
+        <div class="card">
+          <div class="product-image" id="img-5"></div>
+          <h3>assunto 5</h3>
+          <p>bla bla bla</p>
+          <p>
+            <span class="bold">27/12/2021</span>
+          </p>
+          <a href="assunto5.html" class="btn">clique aqui</a>
+        </div>
+        <div class="card">
+          <div class="product-image" id="img-6"></div>
+          <h3>assunto 6</h3>
+          <p>sobre o assunto</p>
+          <p>
+            <span class="bold">12/09/2020</span>
+          </p>
+          <a href="assunto6.html" class="btn">clique aqui</a>
+        </div> 
+      </section>
+    </main>
+    <!-- Rodapé -->
     <footer>
-        <p>
-            sei la kkj
-        </p>
-        
+      <p>
+        <span class="bold">alêmittö</span>
+        &copy; 2022
+      </p>
     </footer>
   </body>
 </html>
