--- a/main.html
+++ b/main.html
@@ -20,9 +20,9 @@
         </label>
       <nav>
           <ul>
-           <li> <a href="">Home</a> </li>
+           <li> <a href="main.html">Home</a> </li>
            <li> <a href="">Quiz</a> </li>
-           <li> <a href="">Créditos</a> </li>
+           <li> <a href="creditos.html">Créditos</a> </li>
         </ul>
       </nav>
     </header>
@@ -41,8 +41,8 @@
         </div>
         <div class="card">
           <div class="product-image" id="img-2"></div>
-          <h3>assunto 2</h3>
-          <p>Este assunto é sobre </p>
+          <h3>Filmes Nordicos</h3>
+          <p>Conheça Produções artisticas Nordicas Interessantes</p>
           <p>
             <span class="bold">07/08/2021</span>
           </p>
@@ -50,8 +50,8 @@
         </div>
         <div class="card">
           <div class="product-image" id="img-3"></div>
-          <h3>ASSUNTO 3</h3>
-          <p>Este assunto é sobre</p>
+          <h3>Arquitetura Nordica</h3>
+          <p>Aprenda um pouco como os Nordicos construiam casas</p>
           <p>
             <span class="bold">12/05/2021</span>
           </p>
@@ -59,8 +59,8 @@
         </div>
         <div class="card">
           <div class="product-image" id="img-4"></div>
-          <h3>ASSUNTO 4</h3>
-          <p>bla bla bla</p>
+          <h3>Armas Vikings</h3>
+          <p>Aprenda sobre as Armas vikings e como eles as ultilizavam!</p>
           <p>
             <span class="bold">31/03/2022</span>
           </p>
@@ -68,8 +68,8 @@
         </div>
         <div class="card">
           <div class="product-image" id="img-5"></div>
-          <h3>assunto 5</h3>
-          <p>bla bla bla</p>
+          <h3>Reinos Nordicos</h3>
+          <p>Asgard, Midgard, Vanaheim, Jotunheim, Niflheim, Svartalfheim, Muspelheim, Nidavellir e Álfheim.</p>
           <p>
             <span class="bold">27/12/2021</span>
           </p>
@@ -77,8 +77,8 @@
         </div>
         <div class="card">
           <div class="product-image" id="img-6"></div>
-          <h3>assunto 6</h3>
-          <p>sobre o assunto</p>
+          <h3>Roupas vikings</h3>
+          <p>descubra um pouco mais sobre como os Vikings se vestiam!</p>
           <p>
             <span class="bold">12/09/2020</span>
           </p>
