--- a/assunto5.html
+++ b/assunto5.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="imagem/png" href="imagens/17 Sem Título_20220701194002.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Edu+SA+Beginner&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- Cabeçalho e menu -->
