--- a/assunto2.html
+++ b/assunto2.html
@@ -1,56 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>alêmittö</title>
-    <link rel="stylesheet" href="assunto5.css" />
-    <link rel="icon" type="imagem/png" href="imagens/17 Sem Título_20220701194002.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <!-- Cabeçalho e menu -->
-    <header>
-      <img src="https://i.ibb.co/nMvyL54/imagem-2022-06-26-181027258.png" alt="imagem logo alêmittö" border="0" class="logo">
-      <img src="https://i.ibb.co/35Xrmtv/imagem-2022-06-26-181243479.png" alt="imagem nome" border="0" class="logo">
-          <!-- Navegação -->
-      <input type="checkbox" id="chec">
-        <label for="chec">
-          <img src="https://cdn-icons-png.flaticon.com/512/55/55003.png" alt="imagem menu">
-        </label>
-      <nav>
-          <ul>
-           <li> <a href="main.html">Home</a> </li>
-           <li> <a href="">Quiz</a> </li>
-           <li> <a href="">Créditos</a> </li>
-        </ul>
-      </nav>
-    </header>
 
-    <!-- abas de páginas -->
-    <main class="container">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/waTob1IM4UM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="thor"></iframe>
-        <h1> Thor: Amor e Trovão</h1> 
-        <p>Data de lançamento: 7 de julho de 2022</p>
-        <p>“Thor: Amor e Trovão”, da Marvel Studios, encontra o Deus do Trovão numa jornada diferente de tudo o que já enfrentou – a procura pela paz interior.
-           Mas a reforma de Thor é interrompida por um assassino galáctico conhecido como Gorr, o Carniceiro dos Deuses, que procura a extinção dos deuses
-        </p>
-        <p> Para combater a ameaça, Thor pede a ajuda da Rei Valkiria, de Korg e da ex-namorada Jane Foster, que – para surpresa de Thor – empunha inexplicavelmente o seu martelo mágico, Mjolnir, e se intitula a Poderosa Thor</p>
-        <p>Juntos, eles embarcam numa angustiante aventura cósmica para descobrir o mistério da vingança do Carniceiro dos Deuses e detê-lo antes que seja tarde demais.</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/9GgxinPwAGc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="thor"></iframe>
-        <h1> vikings</h1>
-        <p>Vikings segue a vida de Ragnar Lothbrok (Travis Fimmel), o maior guerreiro da sua era.  </p>
-        <p> Lider de seu bando, com seus irmãos e sua família, ele ascende ao poder e torna-se Rei da tribo dos vikings. Além de guerreiro implacável, Ragnar segue as tradições nórdicas e é devoto dos deuses.</p>
-    </main>
-    <!-- Rodapé -->
-    <footer>
-      <p>
-        <span class="bold">alêmittö</span>
-        &copy; 2022
-      </p>
-    </footer>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>alêmittö</title>
+  <link rel="stylesheet" href="assunto5.css" />
+  <link rel="icon" type="imagem/png" href="imagens/17 Sem Título_20220701194002.png" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
+
+<body>
+  <!-- Cabeçalho e menu -->
+  <header>
+    <img src="https://i.ibb.co/nMvyL54/imagem-2022-06-26-181027258.png" alt="imagem logo alêmittö" border="0"
+      class="logo">
+    <img src="https://i.ibb.co/35Xrmtv/imagem-2022-06-26-181243479.png" alt="imagem nome" border="0" class="logo">
+    <!-- Navegação -->
+    <input type="checkbox" id="chec">
+    <label for="chec">
+      <img src="https://cdn-icons-png.flaticon.com/512/55/55003.png" alt="imagem menu">
+    </label>
+    <nav>
+      <ul>
+        <li> <a href="main.html">Home</a> </li>
+        <li> <a href="">Quiz</a> </li>
+        <li> <a href="creditos.html">Créditos</a> </li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- abas de páginas -->
+  <main class="container">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/waTob1IM4UM" title="YouTube video player"
+      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen class="thor"></iframe>
+    <h1> Thor: Amor e Trovão</h1>
+    <p>Data de lançamento: 7 de julho de 2022</p>
+    <p>“Thor: Amor e Trovão”, da Marvel Studios, encontra o Deus do Trovão numa jornada diferente de tudo o que já
+      enfrentou – a procura pela paz interior.
+      Mas a reforma de Thor é interrompida por um assassino galáctico conhecido como Gorr, o Carniceiro dos Deuses, que
+      procura a extinção dos deuses
+    </p>
+    <p> Para combater a ameaça, Thor pede a ajuda da Rei Valkiria, de Korg e da ex-namorada Jane Foster, que – para
+      surpresa de Thor – empunha inexplicavelmente o seu martelo mágico, Mjolnir, e se intitula a Poderosa Thor</p>
+    <p>Juntos, eles embarcam numa angustiante aventura cósmica para descobrir o mistério da vingança do Carniceiro dos
+      Deuses e detê-lo antes que seja tarde demais.</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/9GgxinPwAGc" title="YouTube video player"
+      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen class="thor"></iframe>
+    <h1> vikings</h1>
+    <p>Vikings segue a vida de Ragnar Lothbrok (Travis Fimmel), o maior guerreiro da sua era. </p>
+    <p> Lider de seu bando, com seus irmãos e sua família, ele ascende ao poder e torna-se Rei da tribo dos vikings.
+      Além de guerreiro implacável, Ragnar segue as tradições nórdicas e é devoto dos deuses. </p>
+  </main>
+  <!-- Rodapé -->
+  <footer>
+    <p>
+      <span class="bold">alêmittö</span>
+      &copy; 2022
+    </p>
+    <p><a href="assunto2.html" id="cima">↥</a></p>
+  </footer>
+</body>
+
 </html>
