--- a/main.html
+++ b/main.html
@@ -6,23 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>alêmittö</title>
     <link rel="stylesheet" href="estilo.css" />
-    <link rel="icon" type="imagem/png" href="imagens/17 Sem Título_20220701194002.png" />
+    <link
+      rel="icon"
+      type="imagem/png"
+      href="imagens/17 Sem Título_20220701194002.png"
+    />
   </head>
+
   <body>
     <!-- Cabeçalho e menu -->
     <header>
-      <img src="https://i.ibb.co/nMvyL54/imagem-2022-06-26-181027258.png" alt="imagem logo alêmittö" border="0">
-      <img src="https://i.ibb.co/35Xrmtv/imagem-2022-06-26-181243479.png" alt="imagem nome" border="0">
-          <!-- Navegação -->
-      <input type="checkbox" id="chec">
-        <label for="chec">
-          <img src="https://cdn-icons-png.flaticon.com/512/55/55003.png" alt="imagem menu">
-        </label>
+      <img
+        src="https://i.ibb.co/nMvyL54/imagem-2022-06-26-181027258.png"
+        alt="imagem logo alêmittö"
+        border="0"
+      />
+      <img
+        src="https://i.ibb.co/35Xrmtv/imagem-2022-06-26-181243479.png"
+        alt="imagem nome"
+        border="0"
+      />
+      <!-- Navegação -->
+      <input type="checkbox" id="chec" />
+      <label for="chec">
+        <img
+          src="https://cdn-icons-png.flaticon.com/512/55/55003.png"
+          alt="imagem menu"
+        />
+      </label>
       <nav>
-          <ul>
-           <li> <a href="main.html">Home</a> </li>
-           <li> <a href="">Quiz</a> </li>
-           <li> <a href="creditos.html">Créditos</a> </li>
+        <ul>
+          <li><a href="main.html">Home</a></li>
+          <li><a href="">Quiz</a></li>
+          <li><a href="creditos.html">Créditos</a></li>
         </ul>
       </nav>
     </header>
@@ -35,7 +51,7 @@
           <h3>Deuses Principais</h3>
           <p>saiba mais sobre os principais deuses desta mitologia</p>
           <p>
-            <span class="bold">26/03/2021</span>
+            <span class="bold"></span>
           </p>
           <a href="deuses.html" class="btn">CLIQUE AQUI</a>
         </div>
@@ -44,7 +60,7 @@
           <h3>Filmes Nordicos</h3>
           <p>Conheça Produções artisticas Nordicas Interessantes</p>
           <p>
-            <span class="bold">07/08/2021</span>
+            <span class="bold"></span>
           </p>
           <a href="assunto2.html" class="btn">CLIQUE AQUI</a>
         </div>
@@ -53,7 +69,7 @@
           <h3>Arquitetura Nordica</h3>
           <p>Aprenda um pouco como os Nordicos construiam casas</p>
           <p>
-            <span class="bold">12/05/2021</span>
+            <span class="bold"></span>
           </p>
           <a href="assunto3.html" class="btn">CLIQUE AQUI</a>
         </div>
@@ -62,16 +78,19 @@
           <h3>Armas Vikings</h3>
           <p>Aprenda sobre as Armas vikings e como eles as ultilizavam!</p>
           <p>
-            <span class="bold">31/03/2022</span>
+            <span class="bold"></span>
           </p>
           <a href="assunto4.html" class="btn">clique aqui </a>
         </div>
         <div class="card">
           <div class="product-image" id="img-5"></div>
           <h3>Reinos Nordicos</h3>
-          <p>Asgard, Midgard, Vanaheim, Jotunheim, Niflheim, Svartalfheim, Muspelheim, Nidavellir e Álfheim.</p>
           <p>
-            <span class="bold">27/12/2021</span>
+            Asgard, Midgard, Vanaheim, Jotunheim, Niflheim, Svartalfheim,
+            Muspelheim, Nidavellir e Álfheim.
+          </p>
+          <p>
+            <span class="bold"></span>
           </p>
           <a href="assunto5.html" class="btn">clique aqui</a>
         </div>
@@ -80,10 +99,10 @@
           <h3>Roupas vikings</h3>
           <p>descubra um pouco mais sobre como os Vikings se vestiam!</p>
           <p>
-            <span class="bold">12/09/2020</span>
+            <span class="bold"></span>
           </p>
           <a href="assunto6.html" class="btn">clique aqui</a>
-        </div> 
+        </div>
       </section>
     </main>
     <!-- Rodapé -->
@@ -91,6 +110,12 @@
       <p>
         <span class="bold">alêmittö</span>
         &copy; 2022
+      </p>
+      <p><a href="main.html" id="cima">↥</a></p>
+      <p>
+        <a href="https://www.youtube.com/watch?v=GLWCYpGWhXo" id="esteregg"
+          >surpresa</a
+        >
       </p>
     </footer>
   </body>
