--- a/assunto4.html
+++ b/assunto4.html
@@ -132,6 +132,17 @@
           <td>¤Arcos e flechas</td>
           <td>¤Escudos</td>
         </tr>
+        <tr> 
+          <td>¤Faca</td>
+          <td>¤Flail</td>
+          <td>¤Lança</td>
+          <td>¤Elmo</td>
+        </tr>
+        <tr>
+          <td>¤faca</td>
+          <td colspan="2">&nbsp;¤Lança</td>
+          <td>armadura</td>
+        </tr>
       </table>
     </main>
     <!-- Rodapé -->
