--- a/creditos.html
+++ b/creditos.html
@@ -28,7 +28,7 @@
       <ul>
         <li> <a href="main.html">Home</a> </li>
         <li> <a href="">Quiz</a> </li>
-        <li> <a href="creditos.html">Créditos</a> </li>
+        <li> <a href="creditos.html" id="creditos">Créditos</a> </li>
       </ul>
     </nav>
   </header>
