--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
       </label>
       <nav>
         <ul>
-          <li><a href="main.html">Home</a></li>
+          <li><a href="main.html" id="home">Home</a></li>
           <li><a href="">Quiz</a></li>
           <li><a href="creditos.html">Créditos</a></li>
         </ul>
