--- a/assunto2.html
+++ b/assunto2.html
@@ -25,7 +25,7 @@
     </label>
     <nav>
       <ul>
-        <li> <a href="main.html">Home</a> </li>
+        <li> <a href="index.html">Home</a> </li>
         <li> <a href="">Quiz</a> </li>
         <li> <a href="creditos.html">Créditos</a> </li>
       </ul>
