--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       </label>
       <nav>
         <ul>
-          <li><a href="main.html" id="home">Home</a></li>
-          <li><a href="">Quiz</a></li>
+          <li><a href="index.html" id="home">Home</a></li>
+          <li><a href="quiz.html">Quiz</a></li>
           <li><a href="creditos.html">Créditos</a></li>
         </ul>
       </nav>
@@ -111,7 +111,7 @@
         <span class="bold">alêmittö</span>
         &copy; 2022
       </p>
-      <p><a href="main.html" id="cima">↥</a></p>
+      <p><a href="index.html" id="cima">↥</a></p>
       <p>
         <a href="https://www.youtube.com/watch?v=GLWCYpGWhXo" id="esteregg"
           >surpresa</a
