--- a/assunto3.html
+++ b/assunto3.html
@@ -26,7 +26,7 @@
     <nav>
       <ul>
         <li> <a href="index.html">Home</a> </li>
-        <li> <a href="">Quiz</a> </li>
+        <li> <a href="quiz.html">Quiz</a> </li>
         <li> <a href="creditos.html">Créditos</a> </li>
       </ul>
     </nav>
