--- a/deuses.html
+++ b/deuses.html
@@ -27,7 +27,7 @@
     <nav>
       <ul>
         <li> <a href="index.html">Home</a> </li>
-        <li> <a href="">Quiz</a> </li>
+        <li> <a href="quiz.html">Quiz</a> </li>
         <li> <a href="creditos.html">Créditos</a> </li>
       </ul>
     </nav>
