--- a/connect4.html
+++ b/connect4.html
@@ -9,7 +9,7 @@
     <script src="connect4.js"></script>
 </head>
 <body>
-    <h1>Connect 4</h1>
+    <img id="logo" src="https://studio.code.org/v3/assets/dQveW7B23TPYvHgQmNOvkf1v_fQW5hO1TOBfPkuJM0Y/DanYr4AVMAABJ_K.png" alt="logo">
     <h2 id="winner"></h2>
     <div id="board"></div>
     <h1><a href="connect4.html">reiniciar</a></h1>
