--- a/cadastre-se.html
+++ b/cadastre-se.html
@@ -25,6 +25,11 @@
             <span>Senha</span>
             <i></i>  
         </div>
+         <div class="inputBox-login">
+            <input type="password" required="required">
+            <span>Confirmar Senha</span>
+            <i></i>  
+        </div>
         <div class="links-login">
             <a href="index.html"> <input type="submit" value="Voltar"> </a>
         </div>
